--- a/.github/workflows/docker-image-builder.yml
+++ b/.github/workflows/docker-image-builder.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Fetch Label of PR
       id: label-the-PR
       run: |
-        PR_LABELS=$(jq -r '.pull_request.labels[].name' "${{ github.eventPath }}" | tr '\n' ',')
+        PR_LABELS=$(curl -s -H "Authorization: Bearer ${{ secrets.GH_TOKEN }}" "https://api.github.com/repos/${{ github.repository }}/pulls/$PR_NUMBER/labels" | jq -r '.[].name' | tr '\n' ',')
         echo "::set-output name=pr-labels::$PR_LABELS"
 
     - id: create-sushi-image
