--- a/.github/workflows/docker-image-builder.yml
+++ b/.github/workflows/docker-image-builder.yml
@@ -26,7 +26,8 @@ jobs:
       id: label-the-PR
       run: |
         echo $PR_NUMBER
-        PR_LABELS=$(curl -s -H "Authorization: Bearer ${{ secrets.GH_TOKEN }}" "https://api.github.com/repos/${{ github.repository }}/pulls/$PR_NUMBER/labels" | jq -r '.[].name' | tr '\n' ',')
+        CURL_RES=$(curl -s -H "Authorization: Bearer ${{ secrets.GH_TOKEN }}" "https://api.github.com/repos/${{ github.repository }}/pulls/$PR_NUMBER/labels")
+        PR_LABELS=$(echo $CURL_RES | jq -r '.[].name' | tr '\n' ',')
         echo "::set-output name=pr-labels::$PR_LABELS"
 
     - id: create-sushi-image
